# TtwUIgallery

./: .gitignore  CMakeLists.txt  README.md
apps/TtwGalleryApp/: CMakeLists.txt  Main.qml  main.cpp
apps/TtwGalleryApp/CppSourceFiles/PageChartHpp/: ChartDataProvider.cpp  ChartDataProvider.h
apps/TtwGalleryApp/CppSourceFiles/PageGrpcHpp/: grpcclient.cpp  grpcclient.h
apps/TtwGalleryApp/src/: Main.qml  main.cpp
apps/TtwGalleryApp/src/pages/: PageChart.qml  PageGrpc.qml  PageHome.qml
apps/TtwGalleryApp/src/pages/snippets/chart/: FoldingLineChartSnippet.qml  FoldingLineChartSnippet.txt
apps/TtwGalleryApp/src/pages/snippets/grpc/: PageGrpcSnippet.txt  PageGrpcUsage.txt
libs/Ttw/Core/: CMakeLists.txt
libs/Ttw/Core/FileTools/: filetool.cpp  filetool.h
libs/Ttw/Core/Logs/: LogConfig.json  logmanager.cpp  logmanager.h
libs/Ttw/Core/gRPCTools/: grpctool.cpp  grpctool.h
libs/Ttw/UI/: CMakeLists.txt  DebugConsole.qml  Icons.qml  SysInfo.qml.in  Theme.qml
libs/Ttw/UI/CppSourceFiles/chart/: fileio.cpp  fileio.h
libs/Ttw/UI/controls/: Expander.qml  GroupBox.qml  StatusBadge.qml  SurfaceCard.qml  TextBox.qml  TtwTitleBar.qml  TtwWindow.qml
libs/Ttw/UI/controls/chartControls/: FoldingLineChart.qml
libs/Ttw/UI/controls/windowControls/: TtwNavigationView.qml  TtwTitleBar.qml
protos/: stream.proto  stream.proto.autosave
